Create default admin kubeconfig in ubunt home dir

--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -153,7 +153,7 @@ Resources:
             kubeadm init --pod-network-cidr=192.168.0.0/16 > /home/ubuntu/kubeadm-init.log
             grep "kubeadm join --token" /home/ubuntu/kubeadm-init.log > /home/ubuntu/kubeadm-join.sh
             sed -i 's/^/sudo /; s/$/ --ignore-preflight-errors=cri' /home/ubuntu/kubeadm-join.sh
-            mkdir -p $HOME/.kube
+            mkdir -p /home/ubuntu/.kube
             cp -i /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
             chown ubuntu:ubuntu -R /home/ubuntu/
             echo "source <(kubectl completion bash)" >> /home/ubuntu/.bashrc
