Give time for master to come up

--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -157,6 +157,7 @@ Resources:
             cp -i /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
             chown ubuntu:ubuntu -R /home/ubuntu/
             echo "source <(kubectl completion bash)" >> /home/ubuntu/.bashrc
+            sleep 100
             kubectl apply -f https://docs.projectcalico.org/v3.1/getting-started/kubernetes/installation/hosted/rbac-kdd.yaml
             kubectl apply -f https://docs.projectcalico.org/v3.1/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/calico.yaml
 
