--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -151,7 +151,7 @@ Resources:
             apt-get install -y kubelet=1.11.1-00 kubeadm=1.11.1-00 kubectl=1.11.1-00
             apt-mark hold kubelet kubeadm kubectl
             kubeadm init --pod-network-cidr=192.168.0.0/16 > /home/ubuntu/kubeadm-init.log
-            grep "kubeadm join --token" /home/ubuntu/kubeadm-init.log > /home/ubuntu/kubeadm-join.sh
+            grep "kubeadm join " /home/ubuntu/kubeadm-init.log > /home/ubuntu/kubeadm-join.sh
             sed -i 's/^/sudo /; s/$/ --ignore-preflight-errors=cri' /home/ubuntu/kubeadm-join.sh
             mkdir -p /home/ubuntu/.kube
             cp -i /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
