Allow load balancer API requests

--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -293,7 +293,7 @@ Resources:
             Action:
             - ec2:Describe*
             - ec2:Get*
-            - elasticloadbalancing:Describe*
+            - elasticloadbalancing:*
             Resource: "*"
 
   EC2InstanceProfile:
